// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct values when line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": "2.00",
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
    }
  }
  updateQuantity={[Function]}
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          20.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          19.45
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Link
      as="/"
      href="/slug?slug=/homepage"
    >
      <a
        className="o-button--sml c-cart-summary__buttons--continue"
        href="/"
        onClick={[Function]}
      >
        continue shopping
      </a>
    </Link>
    <Link
      href="/checkout"
    >
      <a
        className="o-button--sml c-cart-summary__buttons--proceed"
        href="/checkout"
        onClick={[Function]}
      >
        Checkout
      </a>
    </Link>
  </section>
</CartSummary>
`;

exports[`renders correct values when no line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [],
    }
  }
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          0.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          3.45
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Link
      as="/"
      href="/slug?slug=/homepage"
    >
      <a
        className="o-button--sml c-cart-summary__buttons--continue"
        href="/"
        onClick={[Function]}
      >
        continue shopping
      </a>
    </Link>
    <Link
      href="/checkout"
    >
      <a
        className="o-button--sml c-cart-summary__buttons--proceed"
        href="/checkout"
        onClick={[Function]}
      >
        Checkout
      </a>
    </Link>
  </section>
</CartSummary>
`;
